--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,7 +61,7 @@
       </a>
       </div>
       <div class="col-md-6 col-lg-4 column">
-        <a href="#" class="text-decoration-none">
+        <a href="#" class="text-decoration-none" routerLink="/registrar-cliente">
         <div class="card gr-5">
           <div class="txt">
             <h1>REGISTRAR CLIENTE</h1>
