--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
 
-
-
+<div class="container my-5">
+    <router-outlet></router-outlet>
+</div>
