--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="col-md-6 col-lg-4 column">
-        <a href="#" class="text-decoration-none">
+        <a href="#" class="text-decoration-none" routerLink="/productos">
         <div class="card gr-3">
           <div class="txt">
             <h1>MODIFICAR</h1>
