--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -74,11 +74,11 @@
         </a>
       </div>
       <div class="col-md-6 col-lg-4 column">
-        <a href="#" class="text-decoration-none">
+        <a href="#" class="text-decoration-none"  routerLink="/clientes">
         <div class="card gr-6">
           <div class="txt">
-            <h1>CAMBIOS Y DEVOLUCIONES</h1>
-            <p>Aplicar garantia a algun producto.</p>
+            <h1>MODIFICAR CLIENTE</h1>
+            <p>Modificar a un cliente existente.</p>
           </div>
         <div class="ico-card">
           <img src="../../assets/icons/icono-cambios.svg" >
