--- a/src/app/registrar-cli/registrar-cli.component.html
+++ b/src/app/registrar-cli/registrar-cli.component.html
@@ -1,7 +1,7 @@
 <div class="body">
   <div class="container">
-    <h1>Registrar Cliente</h1>
-    <form [formGroup]="formulario" (ngSubmit)="onSubmit()" class="flex-form">
+    <h1>{{ cliente ? 'Actualizar Cliente' : 'Registrar Cliente' }}</h1>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="flex-form">
       <div class="flex-row">
         <div class="form-group">
           <label for="nombre">Nombre(s)</label>
@@ -21,7 +21,8 @@
       <div class="flex-row">
         <div class="form-group">
           <label for="calle">Calle</label>
-          <input formControlName="calle" type="text" class="form-control" id="calle" placeholder="Ej. Calle Principal" required>
+          <input formControlName="calle" type="text" class="form-control" id="calle" placeholder="Ej. Calle Principal"
+            required>
         </div>
         <div class="form-group">
           <label for="numeroExterior">N° Ext.</label>
@@ -42,34 +43,42 @@
       <div class="flex-row">
         <div class="form-group">
           <label for="colonia">Colonia</label>
-          <input formControlName="colonia" type="text" class="form-control" id="colonia" placeholder="Ej. Colonia Residencial" required>
+          <input formControlName="colonia" type="text" class="form-control" id="colonia"
+            placeholder="Ej. Colonia Residencial" required>
         </div>
         <div class="form-group">
           <label for="municipio">Municipio</label>
-          <input formControlName="municipio" type="text" class="form-control" id="municipio" placeholder="Ej. Ciudad Juárez" required>
+          <input formControlName="municipio" type="text" class="form-control" id="municipio"
+            placeholder="Ej. Ciudad Juárez" required>
         </div>
         <div class="form-group">
           <label for="estado">Estado</label>
-          <input formControlName="estado" type="text" class="form-control" id="estado" placeholder="Ej. Chihuahua" required>
+          <input formControlName="estado" type="text" class="form-control" id="estado" placeholder="Ej. Chihuahua"
+            required>
         </div>
       </div>
       <div class="flex-row">
         <div class="form-group">
           <label for="rfc">RFC</label>
-          <input formControlName="rfc" type="text" class="form-control" id="rfc" placeholder="Ej. ABC123456XYZ (opcional)" >
+          <input formControlName="rfc" type="text" class="form-control" id="rfc"
+            placeholder="Ej. ABC123456XYZ (opcional)">
         </div>
         <div class="form-group">
           <label for="correo">Correo Electrónico</label>
-          <input formControlName="correo" type="email" class="form-control" id="correo" placeholder="Ej. correo@example.com" required>
+          <input formControlName="correo" type="email" class="form-control" id="correo"
+            placeholder="Ej. correo@example.com" required>
         </div>
         <div class="form-group">
           <label for="telefono">Teléfono</label>
-          <input formControlName="telefono" type="tel" class="form-control" id="telefono" placeholder="Ej. 555-1234" required>
+          <input formControlName="telefono" type="tel" class="form-control" id="telefono" placeholder="Ej. 555-1234"
+            required>
         </div>
       </div>
       <div class="separator"></div>
       <div class="text-center">
-        <button type="submit" class="btn btn-primary btn-lg" [disabled]="!botonRegistrarHabilitado()">Registrar</button>
+        <button type="submit" class="btn btn-primary btn-lg" [disabled]="!botonRegistrarHabilitado()">
+          {{ cliente ? 'Actualizar' : 'Registrar' }}
+        </button>
       </div>
     </form>
   </div>
