barra de navegación modificada

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
   <div class="container-fluid">
     <img src="../../assets/icons/navbar-icon.svg" href="#">
+    <a class="navbar-brand ms-3" href="#">UrBike</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,9 +9,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link" aria-current="page" href="#">Inicio</a>
         </li>
-
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Estadisticas
@@ -21,11 +21,10 @@
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Eliminar producto</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Deshabilitado</a>
+          <a class="nav-link" aria-current="page" href="#">Reparaciones</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
